committing, updating the Program ans CutoffPoints
