# src/app/services/models.ts
@@ -6,6 +6,9 @@ export type { AiRecommendation } from './models/ai-recommendation';
 export type { AlternativeProgram } from './models/alternative-program';
 export type { AuthenticationRequest } from './models/authentication-request';
 export type { AuthenticationResponse } from './models/authentication-response';
+export type { Category } from './models/category';
+export type { CategoryIdDto } from './models/category-id-dto';
+export type { CategoryRequest } from './models/category-request';
 export type { EligibilityRecord } from './models/eligibility-record';
 export type { EligibleProgram } from './models/eligible-program';
 export type { ExamCheckRecord } from './models/exam-check-record';
@@ -17,6 +20,7 @@ export type { PaymentStatusRequest } from './models/payment-status-request';
 export type { PaymentStatuss } from './models/payment-statuss';
 export type { Program } from './models/program';
 export type { ProgramRequestDto } from './models/program-request-dto';
+export type { ProgramWithCategoriesDto } from './models/program-with-categories-dto';
 export type { RegistrationRequest } from './models/registration-request';
 export type { ResetPasswordRequest } from './models/reset-password-request';
 export type { SendSmsRequest } from './models/send-sms-request';
