# src/app/services/models/category-id-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface CategoryIdDto {
+  id?: number;
+  name?: string;
+}
